# omi

./: .gitignore  DEPLOYMENT.md  LICENSE  README.md  architecture.mmd  docker-compose.yml  final_test.sh  run-all.sh  test_collaboration.sh  test_fresh_collaboration.sh
agents/flux/: pyproject.toml
agents/flux/flux/: __init__.py  cli.py  config.py  models.py  platform_adapter.py
agents/flux/flux/supervisor/: __init__.py  graph.py  tools.py
agents/helix/: .env.example  .gitignore  Dockerfile  pyproject.toml
agents/helix/docker/: docker-compose.yml
agents/helix/docker/sandbox/: Dockerfile
agents/helix/helix/: cli.py  config.py  models.py  platform_adapter.py
agents/helix/helix/agents/: base.py  coder.py  explorer.py  planner.py  researcher.py  triager.py
agents/helix/helix/api/: main.py
agents/helix/helix/memory/: knowledge.py  session.py
agents/helix/helix/supervisor/: graph.py
agents/helix/helix/tools/: coding.py  git.py  github.py  search.py  shell.py  treesitter.py
agents/nexus/: pyproject.toml
agents/nexus/nexus/: __init__.py  cli.py  config.py  models.py  platform_adapter.py
agents/nexus/nexus/supervisor/: __init__.py  graph.py  tools.py
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  api.ts
dashboard/src/pages/: Agents.tsx  Chat.tsx  Metrics.tsx  Tasks.tsx
docs/: AGENTS.md  SECURITY.md  test_flux.py
platform/: .env.example  pyproject.toml
platform/omi_platform/: cli.py  config.py
platform/omi_platform/api/: main.py  middleware.py
platform/omi_platform/api/routes/: agents.py  tasks.py
platform/omi_platform/auth/: jwt.py
platform/omi_platform/collaboration/: __init__.py  tools.py
platform/omi_platform/dispatcher/: executor.py  router.py
platform/omi_platform/observability/: tracker.py
platform/omi_platform/registry/: store.py
platform/omi_platform/sdk/: agent_base.py
platform/omi_platform/storage/: models.py
