[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omi-platform"
version = "0.1.0"
description = "Omi Platform — multi-agent orchestration layer"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "websockets>=13.1",
    "httpx>=0.28.0",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "rich>=13.9.4",
    "structlog>=24.4.0",
    "typer>=0.13.1",
]

[project.scripts]
omi-platform = "omi_platform.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["omi_platform"]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-asyncio", "httpx"]

[tool.ruff]
line-length = 100
target-version = "py311"
