[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flux-agent"
version = "0.1.0"
description = "Flux — data agent for the Omi platform"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langchain-core>=0.3.15",
    "langchain-anthropic>=0.2.4",
    "langchain-ollama>=0.2.0",
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.1",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "aiosqlite>=0.20.0",
    "psycopg[binary]>=3.2.3",
    "duckdb>=1.0.0",
    "pandas>=2.1.0",
    "pyarrow>=15.0.0",
    "plotly>=5.18.0",
    "httpx>=0.28.0",
    "rich>=13.9.4",
    "typer>=0.13.1",
]

[project.scripts]
flux = "flux.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["flux"]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "pytest-asyncio"]

[tool.ruff]
line-length = 100
target-version = "py311"
